--- a/src/index.ejs
+++ b/src/index.ejs
@@ -283,7 +283,7 @@
     <%= require('./diagrams/similar-directions.ejs')() %>
 
     <p>
-      As with InceptionV1, we can perform NMF on the weights of these neurons and find that we recover two clusters that each contribute in predictable ways to the construction of the model's high-low frequency detector: one HF-factor and one LF-factor.
+      As with InceptionV1, we can perform NMF on the weights of these neurons and find that we recover two clusters that each contribute to the construction of the model's high-low frequency detector.
     </p>
 
     <%= require('./diagrams/universality.ejs')() %>
