--- a/src/index.ejs
+++ b/src/index.ejs
@@ -226,6 +226,7 @@
     <h2>Downstream Circuits</h2>
     <p>How are high-low frequency detectors used in the construction of higher-level features?</p>
 
+    <span class="todo">Detail some of the individual rows here in as much precision as you show mixxed3b 345?</span>
 
     <h3>In mixed3b</h3>
     <%= require('./diagrams/downstream-neurons.ejs')() %>
