--- a/src/index.ejs
+++ b/src/index.ejs
@@ -314,6 +314,10 @@
     <p>?</p>
     <p class="todo">Maybe devote a paragraph to concretizing the "their existence feels natural in retrospect" aspect of high-low frequency detectors – in particular, pointing out that high-low frequency is one way to infer the distance of objects? IIRC @colah has described this to me as such before.</p>
 
+    Rephrase "Still, they have many of the hallmarks of important features: their existence feels natural in retrospect, they're an important part of later, higher-level features, and they're common across network architectures."
+
+
+
   </d-article>
 
   <d-appendix>
