Minor wording fixes

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -103,7 +103,7 @@
     <h4 id="dataset-examples">Dataset Examples</h4>
     <p>
       Which images from a natural data distribution – say, perhaps, the training set – cause those neurons to maximally activate?
-      Checking against dataset examples such as these helps ensure we're not misreading the feature visualizations.
+      Checking against <i>dataset examples</i> such as these helps ensure we're not misreading the feature visualizations.
     </p>
 
     <figure id="1.2-dataset-examples">
@@ -116,7 +116,7 @@
     </figure>
 
     <p>
-      As the dataset examples demonstrate, a wide range of real-world objects can cause these detectors to fire: deep 3-D
+      These dataset examples demonstrate that a wide range of real-world objects can cause these detectors to fire: deep 3-D
       textures, such as on the microphone against a blurred background, but also surface textures such as the MP3
       player's metal finish against its shiny screen.
     </p>
