--- a/src/index.ejs
+++ b/src/index.ejs
@@ -121,7 +121,7 @@
       player's metal finish against its shiny screen.
     </p>
 
-    <h4 id="tuning-curves">Tuning Curves</h4>
+    <h4 id="tuning-curves">Synthetic Tuning Curves</h4>
     <p>
       In the <a href="https://distill.pub/2020/circuits/curve-detectors">Curve Detectors</a> we give an example of a <a href="https://distill.pub/2020/circuits/curve-detectors/#radial-tuning-curve">tuning curve</a>, plotting filter response over rotation angle,
       where the input is a natural image that we know has curvature in it. We can repeat this experiment for high-low
@@ -147,22 +147,24 @@
       <img src="diagrams/1.4-tuning-curves/ratio.png"
         style="width: 100%; max-width: 636px; image-rendering: pixelated;" />
       <figcaption class="figcaption">
-        The second axis of variation of our artificial stimuli is the <em>ratio between frequencies</em>.
+        The second axis of variation of our artificial stimuli is the <em>frequency ratio</em>.
         <!--  on the two sides of the high-low frequency edge. -->
       </figcaption>
     </figure>
 
     <p>These two axes then define a space from which we can sample synthetic stimuli. Every 2-D point corresponds to a combination
       of
-      the two varied attributes. In the tuning curve diagram below, each high-low frequency detector is associated with a 60 pixel by 360 pixel heatmap of
+      the two varied attributes. In the diagram below, each high-low frequency detector is associated with a 60px by 360px heatmap of
       activation strength, with each pixel in the heatmap corresponding to the detector's response to one of the synthetic stimuli.</p>
 
     <d-figure id="1.4-tuning-curves">
       <figure></figure>
     </d-figure>
-
     <p>
-      By argmaxing over the two frequencies we recover the angle-response curve from the previous section:
+      Each high-low frequency detector exhibits a clear sensitivity to a limited range of orientations. Within those orientations, the detector is excited by a wide range of frequency ratios, some more strongly than others.
+    </p>
+    <p>
+      Just as we saw <a href="https://distill.pub/2020/circuits/curve-detectors/#synthetic-curves">when investigating curve detectors</a>, the synthetic stimuli that cause the strongest activations are the ones that are most similar to the feature visualization – in this case, the ones that are similar along our two axes of orientation and ratio between frequencies!
     </p>
 
     <!--Upstream Circuits-->
